upload the script

--- a/ansible/sample-playbook.yaml
+++ b/ansible/sample-playbook.yaml
@@ -1,5 +1,13 @@
-- hosts: all 
+- name: Demo play1
+  hosts: webserver 
   tasks: 
     - name: Print Hello 
       ansible.builtin.debug: 
-        msg: hello 
+        msg: hello
+         
+- name: Demo play2
+  hosts: frontend 
+  tasks: 
+    - name: Print Hello 
+      ansible.builtin.debug: 
+        msg: hello         
