added task level variable

--- a/ansible/02-vars.yml
+++ b/ansible/02-vars.yml
@@ -14,4 +14,13 @@
   tasks: 
     - name: Print Hello 
       ansible.builtin.debug: 
-        msg: "{{ URL}} - Kranti"         
+        msg: "{{ URL}} - Kranti"   
+
+- name: Demo on task level variables 
+  hosts: webserver
+  tasks: 
+    - name: Print Hello 
+      ansible.builtin.debug: 
+        msg: "{{ URL}} - Suhasini"  
+      vars: 
+        URL: task.example.com    
