--- a/ansible/02-vars.yml
+++ b/ansible/02-vars.yml
@@ -40,3 +40,4 @@
     - name: Print Hello 
       ansible.builtin.debug: 
         msg: "hostname - {{ ansible_hostname}} " 
+        msg: "Ip address - {{ansible_all_ipv4_addresses}}"
