--- a/ansible/02-vars.yml
+++ b/ansible/02-vars.yml
@@ -41,3 +41,12 @@
       ansible.builtin.debug: 
         msg: "hostname - {{ ansible_hostname}} " 
         msg: "Ip address - {{ansible_all_ipv4_addresses}}"
+        
+
+- name: Register a variable 
+  hosts: webserver
+  tasks: 
+    - name: Get uptime 
+      ansible.builtin.shell: uptime 
+      register: out 
+       
