--- a/ansible/roles/demo/tasks/main.yml
+++ b/ansible/roles/demo/tasks/main.yml
@@ -1,3 +1,3 @@
 - name: Demo on variables - from file
-   ansible.builtin.debug: 
-      msg: "Role"   
+  ansible.builtin.debug: 
+    msg: "Role - {{URL}}"   
