--- a/roboshop-ansible/roles/frontend/tasks/main.yml
+++ b/roboshop-ansible/roles/frontend/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name:  Removing Old Web Content
   ansible.builtin.file:
-    path: /usr/share/nginx/html/
+    path: /usr/share/nginx/html/*
     state: absent
 
 
