--- a/roboshop-ansible/roles/frontend/tasks/main.yml
+++ b/roboshop-ansible/roles/frontend/tasks/main.yml
@@ -21,29 +21,15 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
-# LOG_FILE=/tmp/frontend
+
+- name: Copy files to another location 
+  ansible.builtin.copy:
+    src: frontend-main/static/*
+    dest: /usr/share/nginx/html/
+
+
 
 # source common.sh
-
-# echo Installing Nginx
-# yum install nginx -y &>>$LOG_FILE
-# StatusCheck $?
-
-# echo Downloading Nginx Web Content
-# curl -s -L -o /tmp/frontend.zip "https://github.com/roboshop-devops-project/frontend/archive/main.zip" &>>$LOG_FILE
-# StatusCheck $?
-
-# cd /usr/share/nginx/html
-
-# echo Removing Old Web Content
-# rm -rf * &>>/tmp/frontend
-# StatusCheck $?
-
-# echo Extracting Web Content
-# unzip /tmp/frontend.zip &>>$LOG_FILE
-# StatusCheck $?
-
-
 # mv frontend-main/static/* . &>>$LOG_FILE
 # mv frontend-main/localhost.conf /etc/nginx/default.d/roboshop.conf &>>$LOG_FILE
 
