updated the mongodb role for roboshop

--- a/roboshop-ansible/roboshop.yml
+++ b/roboshop-ansible/roboshop.yml
@@ -3,3 +3,9 @@
   become: true 
   roles: 
     - frontend 
+
+- name: MongoDB Setup
+  hosts: MONGODB
+  become: true 
+  roles: 
+    - mongodb     
