--- a/roboshop-ansible/roboshop.yml
+++ b/roboshop-ansible/roboshop.yml
@@ -1,8 +1,8 @@
-- name: Frontend Setup
-  hosts: FRONTEND
-  become: true 
-  roles: 
-    - frontend 
+# - name: Frontend Setup
+#   hosts: FRONTEND
+#   become: true 
+#   roles: 
+#     - frontend 
 
 - name: MongoDB Setup
   hosts: MONGODB
