added the script for catalogue

--- a/roboshop-ansible/roboshop.yml
+++ b/roboshop-ansible/roboshop.yml
@@ -4,8 +4,14 @@
 #   roles: 
 #     - frontend 
 
-- name: MongoDB Setup
-  hosts: MONGODB
+# - name: MongoDB Setup
+#   hosts: MONGODB
+#   become: true 
+#   roles: 
+#     - mongodb     
+
+- name: Catalogue Setup
+  hosts: CATALOGUE
   become: true 
   roles: 
-    - mongodb     
+    - catalogue  
