--- a/roboshop-ansible/roles/common/tasks/app-prereq.yml
+++ b/roboshop-ansible/roles/common/tasks/app-prereq.yml
@@ -37,11 +37,17 @@
   become_user: roboshop  
 
 
+- name: Copy file with owner and permissions
+  ansible.builtin.copy:
+    src: /tmp/{{COMPONENT}}-main
+    dest: /tmp/{{COMPONENT}}
+    remote_src: yes
+  become_user: roboshop     
 
 - name: Copy files to another location 
   ansible.builtin.copy:
-    src: /tmp/{{COMPONENT}}-main
-    dest: /home/roboshop/{{COMPONENT}}
+    src: /tmp/{{COMPONENT}}/
+    dest: /home/roboshop/{{COMPONENT}}/
     remote_src: yes
   become_user: roboshop       
 
