--- a/roboshop-ansible/roles/common/tasks/app-prereq.yml
+++ b/roboshop-ansible/roles/common/tasks/app-prereq.yml
@@ -37,13 +37,17 @@
   become_user: roboshop  
 
 
-- name: rename a folder 
-  ansible.builtin.copy:
-    src: /tmp/{{COMPONENT}}-main
-    dest: /tmp/{{COMPONENT}}
-    state: directory
-    remote_src: yes
-  become_user: roboshop     
+- name: rename a folder
+  ansible.builtin.shell: mv  /tmp/{{COMPONENT}}-main  /tmp/{{COMPONENT}}
+  become_user: roboshop
+
+# - name: rename a folder 
+#   ansible.builtin.copy:
+#     src: /tmp/{{COMPONENT}}-main
+#     dest: /tmp/{{COMPONENT}}
+#     state: directory
+#     remote_src: yes
+#   become_user: roboshop     
 
 - name: Copy files to another location 
   ansible.builtin.copy:
