--- a/roboshop-ansible/roles/redis/tasks/main.yml
+++ b/roboshop-ansible/roles/redis/tasks/main.yml
@@ -12,11 +12,12 @@
 
 - name: Update Redis Listen address from 127.0.0.1 to 0.0.0.0
   ansible.builtin.replace:
-    path: 
-      - /etc/redis.conf
-      - /etc/redis/redis.conf
+    path: "{{item}}"
     regexp: '127.0.0.1'
     replace: '0.0.0.0'
+  loop: 
+    - /etc/redis.conf
+    - /etc/redis/redis.conf   
 
 
 
