--- a/roboshop-ansible/roles/mysql/tasks/main.yml
+++ b/roboshop-ansible/roles/mysql/tasks/main.yml
@@ -23,6 +23,13 @@
   ansible.builtin.debug:
     msg: "{{out.stdout_lines[-1]}}" 
 
+- name: Check MySQL Credentials
+  community.mysql.mysql_info:
+    login_user: root
+    login_password: "{{ROBOSHOP_MYSQL_PASSWORD}}"
+    filter: version
+  ignore_errors: yes
+  register: mysql_conn_status
 
 - name: mysql temporary password  
   ansible.builtin.shell: mysql_secure_installation -uroot -p"{{ROBOSHOP_MYSQL_PASSWORD}}" < exit.sql 
