--- a/roboshop-ansible/roles/mysql/tasks/main.yml
+++ b/roboshop-ansible/roles/mysql/tasks/main.yml
@@ -31,8 +31,13 @@
   ignore_errors: yes
   register: mysql_conn_status
 
+- name: setup  mysql repo 
+  ansible.builtin.copy:
+    src: exit.sql
+    dest: /tmp/
+
 - name: mysql temporary password  
-  ansible.builtin.shell: mysql_secure_installation -uroot -p"{{ROBOSHOP_MYSQL_PASSWORD}}" < exit.sql 
+  ansible.builtin.shell: mysql_secure_installation -uroot -p"{{ROBOSHOP_MYSQL_PASSWORD}}" < /tmp/exit.sql 
 
 - name: mysql temporary password  
   ansible.builtin.shell: mysql_secure_installation -uroot -p"{{out.stdout_lines[-1]}}" {{ROBOSHOP_MYSQL_PASSWORD}}
