--- a/roboshop-ansible/roles/common/tasks/java.yml
+++ b/roboshop-ansible/roles/common/tasks/java.yml
@@ -9,7 +9,7 @@
 
 
 - name: Setup maven package 
-  ansible.builtin.shell: mvn clean package && mv target/${COMPONENT}-1.0.jar ${COMPONENT}.jar 
+  ansible.builtin.shell: mvn clean package && mv target/{{COMPONENT}}-1.0.jar {{COMPONENT}}.jar 
   args:
     chdir: /home/roboshop/{{COMPONENT}}
   become_user: roboshop
