--- a/roboshop-ansible/roles/common/tasks/python.yml
+++ b/roboshop-ansible/roles/common/tasks/python.yml
@@ -14,12 +14,12 @@
 - name: Install specified python requirements offline from a local directory with downloaded packages
   ansible.builtin.pip:
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
-    executable: pip3.3 
+    executable: pip3
 
 - name: Copy Payment Configuration to System 
   ansible.builtin.copy:
     src: payment.ini
-    dest: /home/roboshop/${COMPONENT}/${COMPONENT}.ini
+    dest: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
 
 - name: Include task systemd.yml
   ansible.builtin.import_tasks: systemd.yml
