added new task promethus

--- a/roboshop-ansible/roles/common/tasks/golang.yml
+++ b/roboshop-ansible/roles/common/tasks/golang.yml
@@ -8,6 +8,9 @@
   ansible.builtin.import_tasks: app-prereq.yml
 
 
+- name: Include task prometheus.yml
+  ansible.builtin.import_tasks: prometheus.yml
+
 - name: Setup go package
   ansible.builtin.shell: go mod init dispatch  && go get && go build
   args:
