--- a/roboshop-ansible/roles/common/tasks/nodejs.yml
+++ b/roboshop-ansible/roles/common/tasks/nodejs.yml
@@ -18,6 +18,9 @@
 - name: Include task app-prereq.yml
   ansible.builtin.import_tasks: app-prereq.yml
 
+- name: Include task prometheus.yml
+  ansible.builtin.import_tasks: prometheus.yml  
+
 
 - name: Install NodeJs dependencies.
   community.general.npm:
