--- a/roboshop-ansible/roboshop.yml
+++ b/roboshop-ansible/roboshop.yml
@@ -1,14 +1,14 @@
-- name: Frontend Setup
-  hosts: FRONTEND
-  become: true 
-  roles: 
-    - frontend
+# - name: Frontend Setup
+#   hosts: FRONTEND
+#   become: true 
+#   roles: 
+#     - frontend
    
-- name: MongoDB Setup
-  hosts: MONGODB
-  become: true 
-  roles: 
-   - mongodb     
+# - name: MongoDB Setup
+#   hosts: MONGODB
+#   become: true 
+#   roles: 
+#    - mongodb     
 
 - name: Catalogue Setup
   hosts: CATALOGUE
@@ -16,59 +16,59 @@
   roles: 
     - catalogue  
 
-- name: REDIS Setup
-  hosts: REDIS
-  become: true 
-  roles: 
-    - redis      
+# - name: REDIS Setup
+#   hosts: REDIS
+#   become: true 
+#   roles: 
+#     - redis      
 
 
-- name: USER Setup
-  hosts: USER
-  become: true 
-  roles: 
-    - user  
+# - name: USER Setup
+#   hosts: USER
+#   become: true 
+#   roles: 
+#     - user  
 
 
-- name: CART Setup
-  hosts: CART
-  become: true 
-  roles: 
-    - cart           
+# - name: CART Setup
+#   hosts: CART
+#   become: true 
+#   roles: 
+#     - cart           
 
-- name: MYSQL Setup
-  hosts: MYSQL
-  become: true 
-  roles: 
-    - mysql          
-
-
-- name: SHIPPING Setup
-  hosts: SHIPPING
-  become: true 
-  roles: 
-    - shipping      
+# - name: MYSQL Setup
+#   hosts: MYSQL
+#   become: true 
+#   roles: 
+#     - mysql          
 
 
-- name: RABBITMQ
-  hosts: RABBITMQ
-  become: true 
-  roles: 
-    - rabbitmq      
+# - name: SHIPPING Setup
+#   hosts: SHIPPING
+#   become: true 
+#   roles: 
+#     - shipping      
 
 
-
-
-- name: PAYMENT
-  hosts: PAYMENT
-  become: true 
-  roles: 
-    - payment       
+# - name: RABBITMQ
+#   hosts: RABBITMQ
+#   become: true 
+#   roles: 
+#     - rabbitmq      
 
 
 
-- name: DISPATCH
-  hosts: DISPATCH
-  become: true 
-  roles: 
-    - dispatch         
+
+# - name: PAYMENT
+#   hosts: PAYMENT
+#   become: true 
+#   roles: 
+#     - payment       
+
+
+
+# - name: DISPATCH
+#   hosts: DISPATCH
+#   become: true 
+#   roles: 
+#     - dispatch         
