--- a/roboshop-ansible/roles/common/tasks/prometheus.yml
+++ b/roboshop-ansible/roles/common/tasks/prometheus.yml
@@ -10,6 +10,7 @@
   ansible.builtin.unarchive:
     src: /tmp/node_exporter-1.4.0.linux-amd64.tar.gz
     dest: /tmp/node_exporter-1.4.0.linux-amd64
+    state: directory
     remote_src: yes
 
 - name: adding a user for node exporter installation 
