--- a/roboshop-ansible/roles/common/tasks/prometheus.yml
+++ b/roboshop-ansible/roles/common/tasks/prometheus.yml
@@ -9,8 +9,7 @@
 - name: Unarchive a file that is already on the remote machine
   ansible.builtin.unarchive:
     src: /tmp/node_exporter-1.4.0.linux-amd64.tar.gz
-    dest: /tmp/node_exporter-1.4.0.linux-amd64
-    state: directory
+    dest: /tmp/
     remote_src: yes
 
 - name: adding a user for node exporter installation 
