--- a/roboshop-ansible/roboshop.yml
+++ b/roboshop-ansible/roboshop.yml
@@ -1,14 +1,14 @@
-# - name: Frontend Setup
-#   hosts: FRONTEND
-#   become: true 
-#   roles: 
-#     - frontend
+- name: Frontend Setup
+  hosts: FRONTEND
+  become: true 
+  roles: 
+    - frontend
    
-# - name: MongoDB Setup
-#   hosts: MONGODB
-#   become: true 
-#   roles: 
-#    - mongodb     
+- name: MongoDB Setup
+  hosts: MONGODB
+  become: true 
+  roles: 
+   - mongodb     
 
 - name: Catalogue Setup
   hosts: CATALOGUE
@@ -30,45 +30,45 @@
     - user  
 
 
-# - name: CART Setup
-#   hosts: CART
-#   become: true 
-#   roles: 
-#     - cart           
+- name: CART Setup
+  hosts: CART
+  become: true 
+  roles: 
+    - cart           
 
-# - name: MYSQL Setup
-#   hosts: MYSQL
-#   become: true 
-#   roles: 
-#     - mysql          
-
-
-# - name: SHIPPING Setup
-#   hosts: SHIPPING
-#   become: true 
-#   roles: 
-#     - shipping      
+- name: MYSQL Setup
+  hosts: MYSQL
+  become: true 
+  roles: 
+    - mysql          
 
 
-# - name: RABBITMQ
-#   hosts: RABBITMQ
-#   become: true 
-#   roles: 
-#     - rabbitmq      
+- name: SHIPPING Setup
+  hosts: SHIPPING
+  become: true 
+  roles: 
+    - shipping      
 
 
-
-
-# - name: PAYMENT
-#   hosts: PAYMENT
-#   become: true 
-#   roles: 
-#     - payment       
+- name: RABBITMQ
+  hosts: RABBITMQ
+  become: true 
+  roles: 
+    - rabbitmq      
 
 
 
-# - name: DISPATCH
-#   hosts: DISPATCH
-#   become: true 
-#   roles: 
-#     - dispatch         
+
+- name: PAYMENT
+  hosts: PAYMENT
+  become: true 
+  roles: 
+    - payment       
+
+
+
+- name: DISPATCH
+  hosts: DISPATCH
+  become: true 
+  roles: 
+    - dispatch         
