added rsyslog and task update

--- a/roboshop-ansible/roles/cart/tasks/main.yml
+++ b/roboshop-ansible/roles/cart/tasks/main.yml
@@ -2,3 +2,8 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: nodejs
+
+- name: Import rsyslog role 
+  ansible.builtin.include_role:
+    name: elk
+    tasks_from: rsyslog    
